# backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/routes/: health.py  orders.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
app/schemas/: orders.py
app/services/: fraud.py  hashing.py  order_service.py  phone.py  pricing.py  sheets_service.py
app/services/capi/: meta.py  snap.py  tiktok.py
tests/: conftest.py  test_fraud.py  test_orders.py  test_phone.py  test_pricing.py
