[tool.poetry]
name = "sukoon-health-api"
version = "0.1.0"
description = "Sukoon Health – Saudi DTC COD ecommerce backend"
authors = ["Sukoon Health <dev@sukoonhealth.shop>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }
pydantic = { extras = ["email"], version = "^2.7" }
pydantic-settings = "^2.3"
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
alembic = "^1.13"
httpx = "^0.27"
slowapi = "^0.1.9"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
